--- a/app/Resources/views/tracks/index.html.twig
+++ b/app/Resources/views/tracks/index.html.twig
@@ -4,6 +4,21 @@
     <div id="wrapper">
         <div id="container">
 
+            {% for message in app.flashes('notice') %}
+                <div class="alert alert-notice">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            {# pass an array argument to get the messages of those types  #}
+            {% for label, messages in app.flashes(['warning', 'error']) %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
             <form action="#" method="post">
                 <label for="countries"></label>
                 <select name="country" id="countries">
@@ -16,6 +31,9 @@
                 </select>
 
                 <button class="btn btn-primary right" type="submit">Update</button>
+                <a href="{{ path('spotify_playlist') }}" class="btn btn-primary right">
+                    <i class="fa fa-spotify" aria-hidden="true"></i> Generate This Playlist on Spotify
+                </a>
             </form>
 
             <table class="table">
@@ -28,7 +46,10 @@
                     <tr>
                         <td>{{ track.rank + 1 }}</td>
                         <td>{{ track.name }}</td>
-                        <td>{{ track.artist.name }}</td>
+                        <td>
+                            <img src="{{ track.image.small }}" alt="{{ track.artist.name }}">
+                            {{ track.artist.name }}
+                        </td>
                     </tr>
                 {% endfor %}
             </table>
